--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@algolia/client-search": "^4.24.0",
 		"@radix-ui/colors": "3.0.0",
 		"@radix-ui/primitive": "1.1.2",
+		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-icons": "1.3.2",
 		"@radix-ui/themes": "3.2.1",
 		"algoliasearch": "^4.24.0",
