--- a/algolia/config.json
+++ b/algolia/config.json
@@ -1,7 +1,7 @@
 {
 	"index_name": "docs",
-	"start_urls": ["https://seekgpt.org/primitives/docs"],
-	"stop_urls": ["https://seekgpt.org/primitives/docs/overview/releases"],
+	"start_urls": ["https://narzary.com/primitives/docs"],
+	"stop_urls": ["https://narzary.com/primitives/docs/overview/releases"],
 	"selectors": {
 		"lvl0": {
 			"selector": "[data-algolia-lvl0]",
